Expanding Cards. Editing

--- a/Day 1. Expanding Cards/index.html
+++ b/Day 1. Expanding Cards/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="container">
        <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2027&q=80')">
-           <h3>Birth of Galaxy</h3>
+        <h3>Birth of Galaxy</h3>
        </div>
 
        <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1462332420958-a05d1e002413?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1940&q=80')">
@@ -21,7 +21,7 @@
        <h3>The Morning Star Inception</h3>
        </div>
 
-       <div class class="panel" style="background-image: url('https://images.unsplash.com/photo-1516339901601-2e1b62dc0c45?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=320&q=80')">
+       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1516339901601-2e1b62dc0c45?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=320&q=80')">
        <h3>Cluster of Stars</h3>
        </div>
 
