Expanding Cards. Done

--- a/Day 1. Expanding Cards/index.html
+++ b/Day 1. Expanding Cards/index.html
@@ -9,27 +9,28 @@
 </head>
 <body>
    <div class="container">
-       <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2027&q=80')">
-        <h3>Birth of Galaxy</h3>
+
+    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1516797045820-6edca89b2830?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80')">
+        <h3>The very moment of God making Nature</h3>
+        </div>
+
+       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1447433819943-74a20887a81e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1075&q=80')">
+       <h3>The Birth of Nature</h3>
        </div>
 
-       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1462332420958-a05d1e002413?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1940&q=80')">
-       <h3>In The Beginning There Was Light </h3>
+       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1033&q=80')">
+        <h3>Serenity</h3>
+        </div>
+
+       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1543722530-d2c3201371e7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1053&q=80')">
+        <h3>Galaxy</h3>
        </div>
 
-       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1484589065579-248aad0d8b13?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=696&q=80')">
-       <h3>The Morning Star Inception</h3>
+       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1531160492875-2a09eb0cd73b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1051&q=80')">
+       <h3>Before the Dawn</h3>
        </div>
 
-       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1516339901601-2e1b62dc0c45?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=320&q=80')">
-       <h3>Cluster of Stars</h3>
-       </div>
-
-       <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1570556319136-3cfc640168a4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80')">
-       <h3>Milky Way</h3>
-       </div>
    </div>
-   
     <script src="script.js" ></script>
 </body>
 </html>
